--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
             git stash
             git pull origin main
             npm install
-            pm2 restart QLDA_Express
+            pm2 restart login_backend
 
       - name: Remove Github Actions IP from security group
         run: |
